# linkedin_content_generator

./: README.md  pyproject.toml
src/automatisation_contenu_linkedin_coach_b2b/: crew.py  main.py
src/automatisation_contenu_linkedin_coach_b2b/config/: agents.yaml  tasks.yaml
