[project]
name = "automatisation_contenu_linkedin_coach_b2b"
version = "0.1.0"
description = "automatisation_contenu_linkedin_coach_b2b using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.177.0,<1.0.0"
]

[project.scripts]
automatisation_contenu_linkedin_coach_b2b = "automatisation_contenu_linkedin_coach_b2b.main:run"
run_crew = "automatisation_contenu_linkedin_coach_b2b.main:run"
train = "automatisation_contenu_linkedin_coach_b2b.main:train"
replay = "automatisation_contenu_linkedin_coach_b2b.main:replay"
test = "automatisation_contenu_linkedin_coach_b2b.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
